# sbox

./: Cargo.toml  README.md
crates/actor-cli/: Cargo.toml  README.md
crates/actor-cli/examples/: basic_usage.rs
crates/actor-cli/src/: main.rs  runtime.rs
crates/actor-cli/tests/: integration_test.rs
crates/actor-kernel/: Cargo.toml
crates/actor-kernel/src/: lib.rs
crates/actor-mailbox/: Cargo.toml
crates/actor-mailbox/benches/: mailbox_bench.rs  mailbox_concurrent_bench.rs
crates/actor-mailbox/src/: lib.rs
crates/actor-scheduler/: Cargo.toml
crates/actor-scheduler/src/: lib.rs
crates/aep-audit/: Cargo.toml
crates/aep-audit/src/: lib.rs
crates/aep-capability/: Cargo.toml
crates/aep-capability/src/: lib.rs
crates/aep-domain/: Cargo.toml
crates/aep-domain/src/: lib.rs
crates/aep-itest/: Cargo.toml
crates/aep-itest/src/: lib.rs
crates/aep-itest/tests/: audit.rs  effectively_once.rs  memory.rs  quota.rs  sandbox_chain.rs  security_chain.rs  telemetry.rs
crates/aep-memory/: Cargo.toml
crates/aep-memory/src/: lib.rs
crates/aep-policy/: Cargo.toml
crates/aep-policy/policies/: tools.cedar
crates/aep-policy/src/: lib.rs
crates/aep-procsandbox/: Cargo.toml
crates/aep-procsandbox/src/: lib.rs
crates/aep-runtime/: Cargo.toml
crates/aep-runtime/src/: lib.rs  main.rs
crates/aep-sandbox/: Cargo.toml
crates/aep-sandbox/src/: lib.rs
crates/aep-supplychain/: Cargo.toml
crates/aep-supplychain/src/: lib.rs
crates/aep-telemetry/: Cargo.toml
crates/aep-telemetry/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/capability/: Cargo.toml
crates/capability/src/: lib.rs
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: lib.rs
crates/event-log/: Cargo.toml
crates/event-log/benches/: event_log_bench.rs
crates/event-log/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/runtime-tests/: Cargo.toml
crates/runtime-tests/tests/: actor_flow.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
deploy/: docker-compose.yml
deploy/clickhouse/: audit_schema.sql
deploy/otel/: README.md
deploy/slo/: README.md
docs/: resume-highlights-zh.md
docs/superpowers/plans/: 2026-05-28-actor-cli.md  2026-05-28-rust-actor-os-runtime-performance-optimization.md  2026-05-28-rust-actor-os-runtime-verification.md  2026-05-28-rust-actor-os-runtime.md  2026-05-30-agent-execution-plane-phase0-acceptance.md  2026-05-30-agent-execution-plane-phase0.md  2026-05-30-agent-execution-plane-phase1-acceptance.md  2026-05-30-agent-execution-plane-phase1.md  2026-05-30-agent-execution-plane-phase1b-acceptance.md  2026-05-30-agent-execution-plane-phase1b.md  2026-05-30-agent-execution-plane-phase2a-acceptance.md  2026-05-30-agent-execution-plane-phase2a.md  2026-05-30-agent-execution-plane-phase2b-acceptance.md  2026-05-30-agent-execution-plane-phase2b.md  2026-05-30-agent-execution-plane-phase2c-acceptance.md  2026-05-30-agent-execution-plane-phase2c.md  2026-05-30-agent-execution-plane-phase3a-acceptance.md  2026-05-30-agent-execution-plane-phase3a.md  2026-05-30-agent-execution-plane-phase3b-acceptance.md  2026-05-30-agent-execution-plane-phase3b.md  2026-05-30-agent-execution-plane-phase3c-acceptance.md  2026-05-30-agent-execution-plane-phase3c.md  2026-05-31-agent-execution-plane-phase2b-live-clickhouse-acceptance.md  2026-05-31-agent-execution-plane-phase2b-live-clickhouse.md  2026-05-31-agent-execution-plane-phase2c-live-jaeger-acceptance.md  2026-05-31-agent-execution-plane-phase2c-live-jaeger.md
docs/superpowers/specs/: 2026-05-28-actor-cli-design.md  2026-05-28-rust-actor-os-runtime-design.md  2026-05-28-rust-actor-os-runtime-performance-optimization-design.md  2026-05-30-agent-execution-plane-design.md
scripts/: kill-recover.sh  proc-sandbox-test.sh  register.sh
