[package]
name = "actor-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
actor-kernel = { path = "../actor-kernel" }
actor-mailbox = { path = "../actor-mailbox" }
actor-scheduler = { path = "../actor-scheduler" }
agent-core = { path = "../agent-core" }
api-types = { path = "../api-types" }
capability = { path = "../capability" }
checkpoint = { path = "../checkpoint" }
event-log = { path = "../event-log" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
