[package]
name = "actor-kernel"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
actor-mailbox = { path = "../actor-mailbox" }
api-types = { path = "../api-types" }
async-trait.workspace = true
event-log = { path = "../event-log" }
thiserror.workspace = true
tokio.workspace = true
