[package]
name = "actor-mailbox"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
api-types = { path = "../api-types" }
async-trait.workspace = true
crossbeam-channel = "0.5"
dashmap = "5"
object-pool = "0.5"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
uuid.workspace = true

[[bench]]
name = "mailbox_bench"
harness = false

[[bench]]
name = "mailbox_concurrent_bench"
harness = false
