[package]
name = "aep-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aep-domain = { path = "../aep-domain" }
aep-capability = { path = "../aep-capability" }
aep-policy = { path = "../aep-policy" }
restate-sdk.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "aep-runtime"
path = "src/main.rs"
