[package]
name = "aep-telemetry"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
tracing-subscriber = "0.3"
