[package]
name = "agent-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
actor-kernel = { path = "../actor-kernel" }
api-types = { path = "../api-types" }
capability = { path = "../capability" }
async-trait.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
