[package]
name = "event-log"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
api-types = { path = "../api-types" }
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
uuid.workspace = true

[[bench]]
name = "event_log_bench"
harness = false
